--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="section_contact">
-            <p>이름 : 하주영<br>연락처 : 010-1234-1234<br>이메일 : abcdfg@naver.com</p>
+            <p>이름 : 하주영<br>연락처 : 010-9222-0350<br>이메일 : hajuyeoung@gmail.com</p>
             <div class="link_wrap">
                 <div class="github_link">
                     <a href="https://github.com/duing2"
